re-sized to stop or prevent overflow

--- a/css/index.css
+++ b/css/index.css
@@ -1302,12 +1302,12 @@ input ::placeholder {
                 position: absolute;
                 top: 40px;
                 bottom: 40px;
-                left: 15px;
+                left: 10px;
                 overflow-x: hidden;
         }
                 #closeOrderForm{
                     position: relative;
-                    bottom: 30px;
+                    bottom: 20px;
                     left: 10px;
                 }
                 #name-food {
